--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://jasonp213.github.io/'
 languageCode = 'zh-TW'
-title = 'Jason Peng'
+title = 'Coding前來一杯咖啡'
 
 theme = 'ezhil'
 
@@ -86,6 +86,11 @@ url = "https://github.com/jasonp213"
 name = "Twitter"
 icon = "twitter"
 url = "https://twitter.com/jasonp404"
+
+[[params.social]]
+name = "Youtube"
+icon = "youtube"
+url = "https://www.youtube.com/channel/UCyMexcPF3mlMy52-aY9P-bw"
 
 # Enable tags.
 [taxonomies]
